display username and user location

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,7 +7,7 @@ h1 {
   font-size: 75px;
 }
 
-#resultHeader {
-  font-weight: bolder;
-  display: none;
-}
+// #resultHeader {
+//   font-weight: bolder;
+//   display: none;
+// }
